SAT en facturas
Sincronizar bases de datos en ADS

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -17164,38 +17164,38 @@ STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 44, 274, 152, 75
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 257, 30, 104, 11
-  CONTROL "", 171, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 402, 30, 65, 11
-  CONTROL "", 180, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 257, 42, 210, 11
-  CONTROL "", 181, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 257, 54, 104, 11
-  CONTROL "0", 182, "Edit", ES_RIGHT|WS_BORDER, 402, 54, 65, 11
-  CONTROL "", 183, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 257, 66, 210, 11
-  CONTROL "", 184, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 257, 78, 70, 11
-  CONTROL "", 185, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 328, 78, 139, 11
-  CONTROL "", 186, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 257, 90, 104, 11
-  CONTROL "", 187, "Edit", WS_BORDER, 402, 90, 65, 11
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 257, 102, 54, 11
-  CONTROL "", 221, "Edit", WS_BORDER|WS_TABSTOP, 312, 102, 155, 11
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 257, 115, 54, 11
-  CONTROL "", 231, "Edit", WS_BORDER|WS_TABSTOP, 312, 115, 155, 11
-  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 500, 30, 56, 11
-  CONTROL "", 211, "Edit", WS_BORDER|WS_TABSTOP, 557, 30, 110, 11
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 500, 42, 56, 11
-  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 557, 42, 110, 11
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 500, 54, 167, 11
-  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 500, 66, 27, 11
-  CONTROL "", 421, "Edit", WS_BORDER|WS_TABSTOP, 529, 66, 27, 11
-  CONTROL "", 422, "Edit", WS_BORDER|WS_TABSTOP, 557, 66, 23, 11
-  CONTROL "", 423, "Edit", WS_BORDER|WS_TABSTOP, 581, 66, 86, 11
-  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 500, 78, 56, 11
-  CONTROL "", 251, "Edit", WS_BORDER|WS_TABSTOP, 557, 78, 110, 11
-  CONTROL "", 252, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 500, 90, 56, 11
-  CONTROL "Agente", 253, "Edit", ES_RIGHT|WS_BORDER, 557, 90, 110, 11
-  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 500, 102, 56, 11
-  CONTROL "", 261, "Edit", WS_BORDER|WS_TABSTOP, 557, 102, 110, 11
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 500, 115, 56, 11
-  CONTROL "", 191, "TBitmap", 0x00800000, 557, 115, 16, 11
-  CONTROL "", 192, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 575, 115, 92, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 252, 30, 104, 11
+  CONTROL "", 171, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 397, 30, 65, 11
+  CONTROL "", 180, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 252, 42, 210, 11
+  CONTROL "", 181, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 252, 54, 104, 11
+  CONTROL "0", 182, "Edit", ES_RIGHT|WS_BORDER, 397, 54, 65, 11
+  CONTROL "", 183, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 252, 66, 210, 11
+  CONTROL "", 184, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 252, 78, 70, 11
+  CONTROL "", 185, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 323, 78, 139, 11
+  CONTROL "", 186, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 252, 90, 104, 11
+  CONTROL "", 187, "Edit", WS_BORDER, 397, 90, 65, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 252, 102, 54, 11
+  CONTROL "", 221, "Edit", WS_BORDER|WS_TABSTOP, 307, 102, 155, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 252, 115, 54, 11
+  CONTROL "", 231, "Edit", WS_BORDER|WS_TABSTOP, 307, 115, 155, 11
+  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 495, 30, 56, 11
+  CONTROL "", 211, "Edit", WS_BORDER|WS_TABSTOP, 552, 30, 110, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 495, 42, 56, 11
+  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 552, 42, 110, 11
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 495, 54, 167, 11
+  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 495, 66, 27, 11
+  CONTROL "", 421, "Edit", WS_BORDER|WS_TABSTOP, 524, 66, 27, 11
+  CONTROL "", 422, "Edit", WS_BORDER|WS_TABSTOP, 552, 66, 23, 11
+  CONTROL "", 423, "Edit", WS_BORDER|WS_TABSTOP, 576, 66, 86, 11
+  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 495, 78, 56, 11
+  CONTROL "", 251, "Edit", WS_BORDER|WS_TABSTOP, 552, 78, 110, 11
+  CONTROL "", 252, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 495, 90, 56, 11
+  CONTROL "Agente", 253, "Edit", ES_RIGHT|WS_BORDER, 552, 90, 110, 11
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 495, 102, 56, 11
+  CONTROL "", 261, "Edit", WS_BORDER|WS_TABSTOP, 552, 102, 110, 11
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 495, 115, 56, 11
+  CONTROL "", 191, "TBitmap", 0x00800000, 552, 115, 16, 11
+  CONTROL "", 192, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 570, 115, 92, 11
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 44, 128, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 98, 128, 50, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 153, 128, 50, 14
@@ -17204,7 +17204,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "S&ubir", 524, "Button", WS_TABSTOP, 318, 128, 50, 14
   CONTROL "&Bajar", 525, "Button", WS_TABSTOP, 373, 128, 50, 14
   CONTROL "Ocultar Esc&ll.", 526, "Button", WS_TABSTOP, 428, 128, 50, 14
-  CONTROL "", IDOK, "TXBrowse", WS_TABSTOP|0x00300000, 44, 143, 623, 127
+  CONTROL "", IDOK, "TXBrowse", WS_TABSTOP|0x00300000, 44, 143, 619, 127
   CONTROL "", 299, "Edit", WS_BORDER|WS_TABSTOP, 50, 287, 90, 11
   CONTROL "", 300, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 141, 287, 48, 11
   CONTROL "", 309, "Edit", WS_BORDER|WS_TABSTOP, 50, 299, 90, 11
@@ -17217,61 +17217,61 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 360, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 99, 335, 90, 11
   CONTROL "", 370, "TXBrowse", WS_GROUP|0x00200000, 202, 275, 278, 71
   CONTROL "", 411, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 486, 275, 77, 11
-  CONTROL "", 412, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 564, 275, 41, 11
+  CONTROL "", 412, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 564, 275, 37, 11
   CONTROL "Punto verde", 409, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 486, 314, 53, 10
-  CONTROL "", 400, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 605, 275, 61, 11
+  CONTROL "", 400, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 602, 275, 61, 11
   CONTROL "Recargo equivalencia", 406, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 486, 332, 83, 10
   CONTROL "", 440, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 486, 342, 74, 40
   CONTROL "", 490, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 561, 342, 36, 13
-  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 113, 43, 25, 11
-  CONTROL "", 110, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 139, 43, 46, 11
-  CONTROL "", 120, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 186, 43, 19, 11
-  CONTROL "", 217, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_NOINTEGRALHEIGHT|WS_TABSTOP, 113, 29, 92, 104
-  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 113, 55, 92, 11
-  CONTROL "", 570, "Edit", WS_BORDER|WS_TABSTOP, 113, 67, 92, 11
-  CONTROL "", 111, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 113, 79, 92, 11
-  CONTROL "", 113, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 113, 91, 92, 11
-  CONTROL "", 115, "Edit", ES_RIGHT|WS_BORDER, 113, 102, 92, 11
-  CONTROL "Imp. incluidos", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 103, 67, 10
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 107, 43, 25, 11
+  CONTROL "", 110, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 133, 43, 46, 11
+  CONTROL "", 120, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 180, 43, 19, 11
+  CONTROL "", 217, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_NOINTEGRALHEIGHT|WS_TABSTOP, 107, 29, 92, 104
+  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 107, 55, 92, 11
+  CONTROL "", 570, "Edit", WS_BORDER|WS_TABSTOP, 107, 67, 92, 11
+  CONTROL "", 111, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 107, 79, 92, 11
+  CONTROL "", 113, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 107, 91, 92, 11
+  CONTROL "", 115, "Edit", ES_RIGHT|WS_BORDER, 107, 102, 92, 11
+  CONTROL "Imp. incluidos", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 103, 56, 10
   CONTROL "", 601, "TBtnBmp", 0x00000000, 56, 114, 12, 12
   CONTROL "", 602, "TBtnBmp", 0x00000000, 68, 114, 12, 12
   CONTROL "", 603, "TBtnBmp", 0x00000000, 80, 114, 12, 12
-  CONTROL "&G", 512, "Button", WS_TABSTOP, 96, 114, 12, 12
-  CONTROL "", 151, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 358, 3, 92, 12
-  CONTROL "", 150, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 263, 4, 92, 12
-  CONTROL "", 152, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 451, 3, 92, 12
-  CONTROL "0", 401, "Static", SS_RIGHT|WS_GROUP, 586, 287, 80, 8
-  CONTROL "0", 405, "Static", SS_RIGHT|WS_GROUP, 586, 323, 80, 8
-  CONTROL "0", 407, "Static", SS_RIGHT|WS_GROUP, 586, 333, 80, 8
-  CONTROL "0", 403, "Static", SS_RIGHT|WS_GROUP, 586, 305, 80, 8
-  CONTROL "0", 404, "Static", SS_RIGHT|WS_GROUP, 586, 314, 80, 8
+  CONTROL "&G", 512, "Button", WS_TABSTOP, 93, 114, 12, 12
+  CONTROL "", 151, "Edit", NOT WS_VISIBLE|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 107, 114, 92, 12
+  CONTROL "", 150, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 107, 114, 92, 12
+  CONTROL "", 152, "Edit", NOT WS_VISIBLE|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 107, 114, 92, 12
+  CONTROL "0", 401, "Static", SS_RIGHT|WS_GROUP, 583, 287, 80, 8
+  CONTROL "0", 405, "Static", SS_RIGHT|WS_GROUP, 583, 323, 80, 8
+  CONTROL "0", 407, "Static", SS_RIGHT|WS_GROUP, 583, 333, 80, 8
+  CONTROL "0", 403, "Static", SS_RIGHT|WS_GROUP, 583, 305, 80, 8
+  CONTROL "0", 404, "Static", SS_RIGHT|WS_GROUP, 583, 314, 80, 8
   CONTROL "", 488, "Static", WS_GROUP, 485, 355, 34, 16
-  CONTROL "0", 485, "Static", SS_RIGHT|WS_GROUP, 580, 355, 86, 16
-  CONTROL "0", 491, "Static", SS_RIGHT|WS_GROUP, 605, 344, 61, 8
+  CONTROL "0", 485, "Static", SS_RIGHT|WS_GROUP, 577, 355, 86, 16
+  CONTROL "0", 491, "Static", SS_RIGHT|WS_GROUP, 602, 344, 61, 8
   CONTROL "Número", -1, "Static", WS_GROUP, 44, 46, 48, 8
   CONTROL "Neto", 708, "Static", WS_GROUP, 486, 287, 53, 8
   CONTROL "Impuestos", 709, "Static", WS_GROUP, 486, 323, 53, 8
   CONTROL "Imp. especiales", 710, "Static", WS_GROUP, 486, 305, 53, 8
-  CONTROL "Divisa", -1, "Static", WS_GROUP, 470, 117, 29, 8
-  CONTROL "Cliente", -1, "Static", WS_GROUP, 208, 33, 48, 8
-  CONTROL "Nombre", -1, "Static", WS_GROUP, 208, 44, 48, 8
-  CONTROL "N.I.F.", -1, "Static", WS_GROUP, 208, 57, 48, 8
-  CONTROL "Domicilio", -1, "Static", WS_GROUP, 208, 69, 48, 8
-  CONTROL "CP/Población", -1, "Static", WS_GROUP, 208, 81, 48, 8
-  CONTROL "Provincia", -1, "Static", WS_GROUP, 208, 93, 48, 8
-  CONTROL "Riesgo", -1, "Static", WS_GROUP, 364, 57, 27, 8
-  CONTROL "Precio", -1, "Static", WS_GROUP, 364, 33, 25, 8
-  CONTROL "Teléfono", -1, "Static", WS_GROUP, 364, 93, 33, 8
-  CONTROL "Tarifa pers.", -1, "Static", WS_GROUP, 470, 33, 29, 8
-  CONTROL "Direcc.", -1, "Static", WS_GROUP, 208, 105, 48, 8
-  CONTROL "Almacén", -1, "Static", WS_GROUP, 208, 118, 48, 8
-  CONTROL "Pago", -1, "Static", WS_GROUP, 470, 45, 29, 8
-  CONTROL "Agente", -1, "Static", WS_GROUP, 470, 81, 29, 8
-  CONTROL "%Com.", -1, "Static", WS_GROUP, 470, 93, 29, 8
-  CONTROL "Ruta", -1, "Static", WS_GROUP, 470, 105, 29, 8
+  CONTROL "Divisa", -1, "Static", WS_GROUP, 465, 117, 29, 8
+  CONTROL "Cliente", -1, "Static", WS_GROUP, 202, 33, 48, 8
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 202, 44, 48, 8
+  CONTROL "N.I.F.", -1, "Static", WS_GROUP, 202, 57, 48, 8
+  CONTROL "Domicilio", -1, "Static", WS_GROUP, 202, 69, 48, 8
+  CONTROL "CP/Población", -1, "Static", WS_GROUP, 202, 81, 48, 8
+  CONTROL "Provincia", -1, "Static", WS_GROUP, 202, 93, 48, 8
+  CONTROL "Riesgo", -1, "Static", WS_GROUP, 359, 57, 27, 8
+  CONTROL "Precio", -1, "Static", WS_GROUP, 359, 33, 25, 8
+  CONTROL "Teléfono", -1, "Static", WS_GROUP, 359, 93, 33, 8
+  CONTROL "Tarifa pers.", -1, "Static", WS_GROUP, 465, 33, 29, 8
+  CONTROL "Direcc.", -1, "Static", WS_GROUP, 202, 105, 48, 8
+  CONTROL "Almacén", -1, "Static", WS_GROUP, 202, 118, 48, 8
+  CONTROL "Pago", -1, "Static", WS_GROUP, 465, 45, 29, 8
+  CONTROL "Agente", -1, "Static", WS_GROUP, 465, 81, 29, 8
+  CONTROL "%Com.", -1, "Static", WS_GROUP, 465, 93, 29, 8
+  CONTROL "Ruta", -1, "Static", WS_GROUP, 465, 105, 29, 8
   CONTROL "Margen", 800, "Static", WS_GROUP, 50, 360, 35, 8
   CONTROL "", -1, "Button", BS_GROUPBOX, 44, 349, 152, 24
-  CONTROL "0", 402, "Static", SS_RIGHT|WS_GROUP, 586, 296, 80, 8
+  CONTROL "0", 402, "Static", SS_RIGHT|WS_GROUP, 583, 296, 80, 8
   CONTROL "Transporte", 712, "Static", WS_GROUP, 486, 296, 53, 8
   CONTROL "", 408, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 89, 357, 100, 11
   CONTROL "Fecha salida", 112, "Static", WS_GROUP, 44, 81, 48, 8
@@ -17283,12 +17283,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 560, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 288, 360, 60, 11
   CONTROL "Descuento por entrega %", 562, "Static", WS_GROUP, 202, 363, 84, 8
   CONTROL "NFC", -1, "Static", WS_GROUP, 44, 69, 48, 8
-  CONTROL "Banco", -1, "Static", WS_GROUP, 470, 57, 29, 8
-  CONTROL "Cuenta", -1, "Static", WS_GROUP, 470, 69, 29, 8
+  CONTROL "Banco", -1, "Static", WS_GROUP, 465, 57, 29, 8
+  CONTROL "Cuenta", -1, "Static", WS_GROUP, 465, 69, 29, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Factura cliente", -1, "Static", WS_GROUP, 44, 3, 120, 8
   CONTROL "Fecha", -1, "Static", WS_GROUP, 44, 58, 48, 8
-  CONTROL "", 153, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 545, 3, 92, 12
+  CONTROL "", 153, "Edit", NOT WS_VISIBLE|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 107, 114, 92, 12
   CONTROL "", 604, "TBtnBmp", 0x00000000, 44, 114, 12, 12
 }
 
