--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -483,7 +483,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 110, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 105, 91, 70, 11
   CONTROL "0", 111, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 105, 91, 70, 11
   CONTROL "Codificación de proveedores", 510, "Button", WS_TABSTOP, 362, 88, 123, 14
-  CONTROL "", 610, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 48, 119, 63, 40
+  CONTROL "", 610, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 48, 118, 63, 40
   CONTROL "Bloquear %", 150, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 119, 146, 49, 10
   CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 173, 144, 44, 12
   CONTROL "", 165, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 220, 144, 50, 33
@@ -6408,24 +6408,24 @@ FONT 8, "MS Sans Serif"
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 33, 193, 2
 }
 
-SEARCH DIALOG DISCARDABLE 69, 96, 327, 108
+SEARCH DIALOG DISCARDABLE 69, 96, 361, 105
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Buscar..."
 FONT 8, "MS Sans Serif"
 {
   CONTROL "Buscar por códigos de barras", 120, "Button", BS_AUTORADIOBUTTON, 5, 3, 105, 10
-  CONTROL "", 130, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 63, 14, 94, 12
+  CONTROL "", 130, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 63, 16, 94, 11
   CONTROL "Buscar por código de proveedor", 121, "Button", BS_AUTORADIOBUTTON, 5, 34, 115, 10
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 63, 48, 60, 12
-  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 125, 48, 193, 12
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 63, 62, 80, 12
-  CONTROL "&Buscar", 500, "Button", WS_TABSTOP, 212, 88, 50, 14
-  CONTROL "&Salir", 510, "Button", WS_TABSTOP, 270, 88, 50, 14
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 63, 48, 94, 11
+  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 160, 48, 193, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 63, 61, 94, 11
+  CONTROL "&Buscar [F5]", 500, "Button", WS_TABSTOP, 245, 85, 50, 14
+  CONTROL "&Salir", 510, "Button", WS_TABSTOP, 303, 85, 50, 14
   CONTROL "Proveedor", -1, "Static", WS_GROUP, 16, 52, 38, 8
-  CONTROL "Código", -1, "Static", WS_GROUP, 16, 66, 27, 8
-  CONTROL "Código", -1, "Static", WS_GROUP, 16, 18, 40, 8
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 5, 30, 315, 1
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 5, 80, 315, 1
+  CONTROL "Código", -1, "Static", WS_GROUP, 16, 65, 27, 8
+  CONTROL "Código", -1, "Static", WS_GROUP, 16, 19, 27, 8
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 5, 30, 350, 1
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 5, 78, 350, 1
 }
 
 CONTABILIZASESION DIALOG DISCARDABLE 64, 57, 495, 392
