--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -4580,67 +4580,66 @@ FONT 8, "MS Sans Serif"
   CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 150, 285, 92
 }
 
-PREDIV DIALOG DISCARDABLE 140, 65, 598, 228
+PREDIV DIALOG DISCARDABLE 140, 65, 598, 216
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Precios por propiedades"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "TXBrowse", 0x00200000, 3, 10, 108, 196
-  CONTROL "Todas", 111, "Button", WS_TABSTOP, 3, 210, 50, 14
-  CONTROL "Ninguna", 112, "Button", WS_TABSTOP, 61, 210, 50, 14
-  CONTROL "", 110, "TXBrowse", 0x00200000, 113, 10, 108, 196
-  CONTROL "Todas", 113, "Button", WS_TABSTOP, 113, 210, 50, 14
-  CONTROL "Ninguna", 114, "Button", WS_TABSTOP, 171, 210, 50, 14
+  CONTROL "", 100, "TXBrowse", 0x00200000, 3, 10, 108, 183
+  CONTROL "Todas", 111, "Button", WS_TABSTOP, 3, 197, 50, 14
+  CONTROL "Ninguna", 112, "Button", WS_TABSTOP, 61, 197, 50, 14
+  CONTROL "", 110, "TXBrowse", 0x00200000, 113, 10, 108, 183
+  CONTROL "Todas", 113, "Button", WS_TABSTOP, 113, 197, 50, 14
+  CONTROL "Ninguna", 114, "Button", WS_TABSTOP, 171, 197, 50, 14
   CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 290, 14, 292, 11
   CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 290, 27, 292, 11
-  CONTROL "Precios por propiedades", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 232, 51, 93, 10
-  CONTROL "", 600, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 290, 72, 70, 11
-  CONTROL "Bloq.", 300, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 288, 113, 32, 10
-  CONTROL "", 310, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 326, 112, 38, 11
-  CONTROL "", 320, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 367, 112, 49, 33
-  CONTROL "", 330, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 429, 112, 70, 11
-  CONTROL "", 340, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 511, 112, 70, 11
-  CONTROL "Bloq.", 350, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 288, 127, 32, 10
-  CONTROL "", 360, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 326, 126, 38, 11
-  CONTROL "", 370, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 367, 126, 49, 33
-  CONTROL "", 380, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 429, 126, 70, 11
-  CONTROL "", 390, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 511, 126, 70, 11
-  CONTROL "Bloq.", 400, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 288, 141, 32, 10
-  CONTROL "", 410, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 326, 140, 38, 11
-  CONTROL "", 420, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 367, 140, 49, 33
-  CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 429, 140, 70, 11
-  CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 511, 140, 70, 11
-  CONTROL "Bloq.", 450, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 288, 155, 32, 10
-  CONTROL "", 460, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 326, 154, 38, 11
-  CONTROL "", 470, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 367, 154, 49, 33
-  CONTROL "", 480, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 429, 154, 70, 11
-  CONTROL "", 490, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 511, 154, 70, 11
-  CONTROL "Bloq.", 500, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 288, 169, 32, 10
-  CONTROL "", 510, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 326, 168, 38, 11
-  CONTROL "", 520, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 367, 168, 49, 33
-  CONTROL "", 530, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 429, 168, 70, 11
-  CONTROL "", 540, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 511, 168, 70, 11
-  CONTROL "Bloq.", 550, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 288, 183, 32, 10
-  CONTROL "", 560, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 326, 182, 38, 11
-  CONTROL "", 570, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 367, 182, 49, 33
-  CONTROL "", 580, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 429, 182, 70, 11
-  CONTROL "", 590, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 511, 182, 70, 11
-  CONTROL "&Añadir", IDOK, "Button", WS_TABSTOP, 490, 210, 50, 14
-  CONTROL "&Salir", IDCANCEL, "Button", WS_TABSTOP, 545, 210, 50, 14
-  CONTROL "Precios de venta", -1, "Button", BS_GROUPBOX, 228, 91, 363, 112
-  CONTROL "Precio 1", -1, "Static", WS_GROUP, 241, 115, 35, 10
-  CONTROL "%Beneficio", -1, "Button", BS_GROUPBOX, 282, 102, 139, 96
-  CONTROL "Neto", -1, "Button", BS_GROUPBOX, 425, 102, 78, 96
-  CONTROL "Impuestos incluidos", -1, "Button", BS_GROUPBOX, 506, 102, 80, 96
-  CONTROL "Precios", -1, "Button", BS_GROUPBOX, 233, 102, 45, 96
-  CONTROL "Precio 2", -1, "Static", WS_GROUP, 241, 129, 35, 10
-  CONTROL "Precio 3", -1, "Static", WS_GROUP, 241, 143, 35, 10
-  CONTROL "Precio 4", -1, "Static", WS_GROUP, 241, 157, 35, 10
-  CONTROL "Precio 5", -1, "Static", WS_GROUP, 241, 171, 35, 10
-  CONTROL "Precio 6", -1, "Static", WS_GROUP, 241, 185, 35, 10
-  CONTROL "Compras", -1, "Button", BS_GROUPBOX, 228, 63, 363, 25
-  CONTROL "Costo", 401, "Static", WS_GROUP, 241, 75, 21, 8
-  CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 225, 43, 369, 164
+  CONTROL "", 600, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 290, 58, 70, 11
+  CONTROL "Bloq.", 300, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 288, 99, 32, 10
+  CONTROL "", 310, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 326, 98, 38, 11
+  CONTROL "", 320, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 367, 98, 49, 33
+  CONTROL "", 330, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 429, 98, 70, 11
+  CONTROL "", 340, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 511, 98, 70, 11
+  CONTROL "Bloq.", 350, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 288, 113, 32, 10
+  CONTROL "", 360, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 326, 112, 38, 11
+  CONTROL "", 370, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 367, 112, 49, 33
+  CONTROL "", 380, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 429, 112, 70, 11
+  CONTROL "", 390, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 511, 112, 70, 11
+  CONTROL "Bloq.", 400, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 288, 127, 32, 10
+  CONTROL "", 410, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 326, 126, 38, 11
+  CONTROL "", 420, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 367, 126, 49, 33
+  CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 429, 126, 70, 11
+  CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 511, 126, 70, 11
+  CONTROL "Bloq.", 450, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 288, 141, 32, 10
+  CONTROL "", 460, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 326, 140, 38, 11
+  CONTROL "", 470, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 367, 140, 49, 33
+  CONTROL "", 480, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 429, 140, 70, 11
+  CONTROL "", 490, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 511, 140, 70, 11
+  CONTROL "Bloq.", 500, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 288, 155, 32, 10
+  CONTROL "", 510, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 326, 154, 38, 11
+  CONTROL "", 520, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 367, 154, 49, 33
+  CONTROL "", 530, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 429, 154, 70, 11
+  CONTROL "", 540, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 511, 154, 70, 11
+  CONTROL "Bloq.", 550, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 288, 169, 32, 10
+  CONTROL "", 560, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 326, 168, 38, 11
+  CONTROL "", 570, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 367, 168, 49, 33
+  CONTROL "", 580, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 429, 168, 70, 11
+  CONTROL "", 590, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 511, 168, 70, 11
+  CONTROL "&Añadir", IDOK, "Button", WS_TABSTOP, 490, 197, 50, 14
+  CONTROL "&Salir", IDCANCEL, "Button", WS_TABSTOP, 545, 197, 50, 14
+  CONTROL "Precios de venta", -1, "Button", BS_GROUPBOX, 228, 77, 363, 112
+  CONTROL "Precio 1", -1, "Static", WS_GROUP, 241, 101, 35, 10
+  CONTROL "%Beneficio", -1, "Button", BS_GROUPBOX, 282, 88, 139, 96
+  CONTROL "Neto", -1, "Button", BS_GROUPBOX, 425, 88, 78, 96
+  CONTROL "Impuestos incluidos", -1, "Button", BS_GROUPBOX, 506, 88, 80, 96
+  CONTROL "Precios", -1, "Button", BS_GROUPBOX, 233, 88, 45, 96
+  CONTROL "Precio 2", -1, "Static", WS_GROUP, 241, 115, 35, 10
+  CONTROL "Precio 3", -1, "Static", WS_GROUP, 241, 129, 35, 10
+  CONTROL "Precio 4", -1, "Static", WS_GROUP, 241, 143, 35, 10
+  CONTROL "Precio 5", -1, "Static", WS_GROUP, 241, 157, 35, 10
+  CONTROL "Precio 6", -1, "Static", WS_GROUP, 241, 171, 35, 10
+  CONTROL "Compras", -1, "Button", BS_GROUPBOX, 228, 49, 363, 25
+  CONTROL "Costo", 401, "Static", WS_GROUP, 241, 61, 21, 8
+  CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 225, 43, 369, 151
   CONTROL "Web", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 226, 6, 368, 38
   CONTROL "Tooltip", -1, "Static", WS_GROUP, 232, 30, 51, 8
   CONTROL "Imagen", -1, "Static", WS_GROUP, 232, 17, 51, 8
@@ -14205,7 +14204,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Propiedad 2", 4002, "Static", WS_GROUP, 48, 56, 43, 8
   CONTROL "", 362, "TBitmap", 0x00000000, 474, 41, 14, 11
   CONTROL "", 372, "TBitmap", 0x00000000, 474, 53, 14, 11
-  CONTROL "Precios por propiedades", 4003, "Button", BS_GROUPBOX, 44, 29, 449, 40
+  CONTROL "Propiedades del artículo", -1, "Button", BS_GROUPBOX, 44, 29, 449, 40
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
