--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -358,7 +358,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Código de barras", -1, "Button", BS_GROUPBOX, 382, 29, 108, 234
   CONTROL "", -1, "Button", BS_GROUPBOX, 44, 67, 336, 69
   CONTROL "", -1, "Button", BS_GROUPBOX, 44, 176, 336, 87
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 138, 336, 37
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 138, 208, 37
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 98, 39, 76, 11
   CONTROL "", 130, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 51, 279, 11
   CONTROL "Añ&d [F2]", 300, "Button", WS_TABSTOP, 387, 39, 33, 14
@@ -377,10 +377,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 357, "TBitmap", 0x00800000, 363, 110, 14, 11
   CONTROL "", 390, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 122, 56, 11
   CONTROL "", 391, "Edit", WS_BORDER, 156, 122, 221, 11
-  CONTROL "Convertir unidades", 280, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 149, 73, 10
+  CONTROL "Convertir unidades", 280, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 148, 73, 10
   CONTROL "Obsoleto", 139, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 161, 44, 10
-  CONTROL "Solicitar número de serie", 136, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 157, 149, 90, 10
+  CONTROL "Solicitar número de serie", 136, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 157, 148, 90, 10
   CONTROL "Autoserializar", 138, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 169, 161, 55, 10
+  CONTROL "Solicitar número de lote", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 262, 148, 88, 10
+  CONTROL "", 610, "Edit", WS_BORDER|WS_TABSTOP, 297, 160, 80, 11
   CONTROL "Incluir en táctil", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 182, 59, 10
   CONTROL "", 225, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 98, 193, 40, 11
   CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 98, 206, 279, 11
@@ -401,6 +403,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Temporada", -1, "Static", WS_GROUP, 49, 113, 41, 8
   CONTROL "", 500, "TBitmap", 0x0000020e, 4, 3, 34, 30, 0x00000020
   CONTROL "Datos generales del artículo", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 446, 8
+  CONTROL "Actual", -1, "Static", WS_GROUP, 262, 163, 25, 8
+  CONTROL "Lote", -1, "Button", BS_GROUPBOX, 255, 138, 125, 37
 }
 
 ARTKITCAT DIALOG DISCARDABLE 30, 106, 311, 105
@@ -15090,14 +15094,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 196, "Edit", WS_BORDER|WS_TABSTOP, 101, 51, 60, 11
   CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 101, 78, 62, 11
   CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 101, 91, 62, 11
-  CONTROL "Solicitar número de lote", 220, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 276, 79, 88, 10
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 342, 91, 90, 11
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 101, 120, 62, 11
   CONTROL "", 254, "Edit", WS_BORDER|WS_TABSTOP, 166, 120, 185, 11
   CONTROL "", 100, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 101, 133, 62, 11
-  CONTROL "KG", 170, "Edit", WS_BORDER|WS_TABSTOP, 165, 133, 20, 11
+  CONTROL "Kg", 170, "Edit", WS_BORDER|WS_TABSTOP, 165, 133, 20, 11
   CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 101, 146, 62, 11
-  CONTROL "LT", 130, "Edit", WS_BORDER|WS_TABSTOP, 165, 146, 20, 11
+  CONTROL "Lt", 130, "Edit", WS_BORDER|WS_TABSTOP, 165, 146, 20, 11
   CONTROL "Aplicar factor de conversión", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 160, 101, 10
   CONTROL "", 210, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 101, 173, 62, 11
   CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 401, 120, 62, 11
@@ -15121,7 +15123,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 390, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 401, 324, 62, 11
   CONTROL "", 400, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 401, 337, 63, 11
   CONTROL "", 410, "Edit", WS_BORDER, 465, 311, 20, 11
-  CONTROL "Unidades de venta", -1, "Button", BS_GROUPBOX, 44, 66, 222, 40
+  CONTROL "Unidades de venta", -1, "Button", BS_GROUPBOX, 44, 66, 446, 40
   CONTROL "Presentación artículo", -1, "Button", BS_GROUPBOX, 44, 108, 447, 81
   CONTROL "Dimensiones caja", -1, "Button", BS_GROUPBOX, 44, 300, 304, 52
   CONTROL "Palets", -1, "Button", BS_GROUPBOX, 350, 300, 141, 52
@@ -15143,20 +15145,15 @@ FONT 8, "MS Sans Serif"
   CONTROL "Volumen", -1, "Static", WS_GROUP, 189, 326, 35, 8
   CONTROL "Creación", -1, "Static", WS_GROUP, 50, 41, 33, 8
   CONTROL "Último cambio", -1, "Static", WS_GROUP, 50, 54, 49, 8
-  CONTROL "Frase", -1, "Static", WS_GROUP, 51, 204, 39, 8
+  CONTROL "Frase", -1, "Static", WS_GROUP, 50, 204, 39, 8
   CONTROL "Caducidad", -1, "Static", WS_GROUP, 356, 176, 40, 8
   CONTROL "", -1, "Button", BS_GROUPBOX, 43, 29, 446, 37
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Logística del artículo ( número de lote, peso, volumen, fecha de caducidad, ... )", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 446, 8
-  CONTROL "Lote actual", -1, "Static", WS_GROUP, 276, 94, 37, 8
-  CONTROL "Factor", -1, "Static", WS_GROUP, 49, 176, 25, 8
+  CONTROL "Factor", -1, "Static", WS_GROUP, 50, 176, 25, 8
   CONTROL "Frase publicitaria", -1, "Button", BS_GROUPBOX, 43, 191, 446, 25
   CONTROL "Producción", -1, "Button", BS_GROUPBOX, 44, 218, 446, 25
   CONTROL "Sección", -1, "Static", WS_GROUP, 50, 231, 39, 8
-  CONTROL "Lote", -1, "Button", BS_GROUPBOX, 269, 66, 220, 40
-  CONTROL "cm", -1, "Static", WS_GROUP, 465, 123, 15, 8
-  CONTROL "cm", -1, "Static", WS_GROUP, 465, 135, 15, 8
-  CONTROL "cm", -1, "Static", WS_GROUP, 465, 147, 15, 8
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
